k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-service-app
  labels:
    name: go-service-app
    environment: production
